--- a/alerm.html
+++ b/alerm.html
@@ -24,7 +24,7 @@ settimeform+="<div id='taima-' onclick='settimefunc()'>タイマーをセット<
 
 function helloworld(){
 	if(page==0){
-		document.getElementById("main").innerHTML=settimeform;
+		document.getElementById("main").innerHTML=settimeform+"<audio id='alermmusic'><source src='alermMID.mid'type='audio/mid'><p>（対応外ブラウザ向けの表示）</p></audio>";
 
 		document.getElementById("menu").innerHTML="hello";
 		document.getElementById("pic_ram").innerHTML="";
@@ -125,6 +125,9 @@ alert(alermhour+alermminute+alermsecond);
 
 
 function alerm(){
+
+
+document.getElementById("alermmusic").play();
 	alert("時間です");
 
 }
