--- a/alerm.html
+++ b/alerm.html
@@ -118,7 +118,7 @@ function settimefunc()
 	//(alermsecondはそのまま)
 
 alert(alermhour+alermminute+alermsecond);
-	setTimeout(function(){alerm();},alermhour+alermminute);
+	setTimeout(function(){alerm();},alermhour+alermminute+alermsecond);
 	alert(sethour+"じ"+setminute+"ふんにアラームをセットしました");
 
 }
