--- a/alerm.html
+++ b/alerm.html
@@ -121,7 +121,8 @@ function settimefunc()
 
 
 	setTimeout(function(){alerm();},alermhour+alermminute+alermsecond);
-	document.getElementById("allalerm").innerHTML+="<div id='alerm"+alermnum+"' onclick='"+alermdelete("+alermnum+")+"'>"+sethour+"じ"+setminute+"ふんにアラームをセットしました<br>";
+	document.getElementById("allalerm").innerHTML+="<div id='alerm"+alermnum+"' onclick='"+alermdelete("+alermnum+")+"'>";
+	document.getElementById("allalerm").innerHTML+=sethour+"じ"+setminute+"ふんにアラームをセットしました<br></div>";
 
 	//アラームの個数を記録して、該当するものを消す（未実装）
 	alermnum++;
@@ -130,11 +131,10 @@ function settimefunc()
 
 function alerm(){
 
-if(){
 document.getElementById("alermmusic").play();
-}
 
 }
+
 
 function alermdelete(alermdeletenum)
 {
