--- a/alerm.html
+++ b/alerm.html
@@ -103,10 +103,10 @@ function settimefunc()
 */
 
 	//さあ、難しい算数の時間だ
-	if(sethour>=nowhour){balancehour=0;}
+	if(sethour<=nowhour){balancehour=0;}
 	else{balancehour=24;}
 
-	if(setminute>=nowminute){balanceminute=0;}
+	if(setminute<=nowminute){balanceminute=0;}
 	else{balanceminte=60;}
 
 	alermsecond=60-nowsecond;
@@ -120,7 +120,7 @@ function settimefunc()
 
 
 
-	setTimeout(function(){alerm();},alermhour+alermminute+alermsecond);
+	setTimeout(function(){alerm(alermnum);},alermhour+alermminute+alermsecond);
 	alert("<div id='alerm"+alermnum+"' onclick='alermdelete("+alermnum+")'>");
 	document.getElementById("allalerm").innerHTML+="<div id='alerm"+alermnum+"' onclick='alermdelete("+alermnum+")'>";
 	document.getElementById("allalerm").innerHTML+=sethour+"じ"+setminute+"ふんにアラームをセットしました<br></div>";
@@ -130,8 +130,8 @@ function settimefunc()
 }
 
 
-function alerm(){
-
+function alerm(alermnum){
+alert(alermnum);
 document.getElementById("alermmusic").play();
 
 }
