--- a/alerm.html
+++ b/alerm.html
@@ -5,6 +5,9 @@
 <script type="text/javascript">
 
 let alermnum=0;//現在設定しているアラームの個数
+let wordnum=new Array();//台詞の個数管理
+
+let word=new Array();
 
 
 //アラーム用関数たちsettimefunc()
@@ -92,6 +95,12 @@ alert("デリートします");
 }
 
 
+function wordsetting()
+{
+	alert("台詞をボタンにかえる関数です");
+}
+
+
 
 </script>
 
@@ -120,16 +129,22 @@ width="150"  height="200" onclick="clicked()">
 <audio id="alermmusic" src="alermMID_Splendid_reisiu_n.mp3" preload="auto"><p>ｍｐ３に対応していないブラウザです</p></audio>
 
 
-<!--アラームのセット画面-->
+<!--時間のセット画面-->
 <h2>何時にしますか</h2><br>
 <input type="text" id="sethour">時<input type="text" id="setminute">分<br>
+
+
+<!--台詞のセット画面-->
+<div id="menu">
+	<button onclick="wordsetting(0)">
+</div>
+
+
+<!--アラームのセット完了画面-->
 <button type="button" value="alermsetbutton" onclick="settimefunc()">
-	アラームをセット（0～24時　0～59分）
+	アラームをセット（時間を選択：0～24時　0～59分）(台詞を選択：台詞のボタンクリック)
 </button>
 
-<div id="menu">
-お風呂　歯磨き･･･
-</div>
 
 <!--アラーム一覧-->
 <div id="allalerm">
