--- a/alerm.html
+++ b/alerm.html
@@ -5,9 +5,11 @@
 <script type="text/javascript">
 
 let alermnum=0;//現在設定しているアラームの個数
+let alermdata=new Array();//台詞とアラームの個数を関連づける。
 let wordnum=new Array();//台詞の個数管理
 
 let word=new Array();
+
 
 
 //アラーム用関数たちsettimefunc()
@@ -66,7 +68,7 @@ alert(alermsecond);
 	alermminute=alermminute*60*1000;
 	alermsecond=alermsecond*1000;
 
-
+	//アラームが数字で設定されているか確認する
 	if(isNaN(setminute) == false && isNaN(sethour) == false){
 		setTimeout(function(){alerm(alermnum);},alermhour+alermminute+alermsecond);
 		alert("<div id='alerm"+alermnum+"' onclick='alermdelete("+alermnum+")'>");
@@ -95,9 +97,11 @@ alert("デリートします");
 }
 
 
-function wordsetting()
+function wordsetting(wordsettingnum)
 {
 	alert("台詞をボタンにかえる関数です");
+	alermdata[alermnum]=wordsettingnum;
+alert(alermdata[alermnum]);
 }
 
 
@@ -136,7 +140,8 @@ width="150"  height="200" onclick="clicked()">
 
 <!--台詞のセット画面-->
 <div id="menu">
-	<button onclick="wordsetting(0)">
+	<button onclick="wordsetting('掃除')">掃除</button>
+	<button onclick="wordsetting('買い物')">買い物</button>
 </div>
 
 
