--- a/alerm.html
+++ b/alerm.html
@@ -50,7 +50,7 @@ function settimefunc()
 	else{balancehour=24;}
 
 	if(setminute>nowminute){balanceminute=0;}
-	else if(setminute==nowminute){alert("現在時刻と同じなので、１分後にアラームを鳴らします");}
+	else if(setminute==nowminute){balanceminute=0;alert("現在時刻と同じなので、１分後にアラームを鳴らします");}
 	else{balanceminute=60;}
 
 	alermsecond=60-nowsecond;
@@ -60,12 +60,11 @@ function settimefunc()
 
 	//alermhour→６０分*６０秒*1000ミリ
 	alermhour=alermhour*60*60*1000;
+
 	alermminute=balanceminute+setminute-nowminute;
-
-
-
 	//alermmunute→60秒*1000ミリ
 	alermminute=alermminute*60*1000;
+
 	alermsecond=alermsecond*1000;
 
 	//アラームが数字で設定されているか確認する
@@ -79,20 +78,23 @@ function settimefunc()
 		alermnum++;
 	}
 	else{alert("数字を入力して下さい")}
+
+alert(alermhour+alermminute+alermsecond);
+
 }
 
 //alermnum"ber"に注意
 function alerm(alermnumber){
 
 	document.getElementById("alermmusic").play();
-	alert(alermdata[alermnumber]+"の時間です");
+	alert(alermdata[0]+"の時間です");
 
 }
 
 //アラームを削除する（未実装）
 function alermdelete(alermdeletenum)
 {
-alert("デリートします");
+alert(alermdeletenum+"つめをデリートします");
 //document.getElementById("alerm"+alermdeletenum).innerHTML="";
 }
 
@@ -100,7 +102,7 @@ alert("デリートします");
 function wordsetting(wordsettingnum)
 {
 	alermdata[alermnum]=word[wordsettingnum];
-alert(alermdata[alermnum]);
+	//ここにアラームデータの大小を判別し、早いものから値を取り出すプログラムを書く
 }
 
 
