--- a/alerm.html
+++ b/alerm.html
@@ -46,7 +46,7 @@ function settimefunc()
 
 
 	//さあ、難しい算数の時間だ
-	if(sethour>nowhour){balancehour=0;}
+	if(sethour>=nowhour){balancehour=0;}
 	else{balancehour=24;}
 
 	if(setminute>nowminute){balanceminute=0;}
