--- a/alerm.html
+++ b/alerm.html
@@ -49,7 +49,7 @@ function settimefunc()
 	if(sethour>=nowhour){balancehour=0;}
 	else{balancehour=24;}
 
-	if(setminute>nowminute){balanceminute=0;}
+	if(setminute>nowminute){balanceminute=-1;}
 	else if(setminute==nowminute){balanceminute=0;alert("現在時刻と同じなので、１分後にアラームを鳴らします");}
 	else{balanceminute=60;}
 
@@ -153,7 +153,7 @@ width="150"  height="200" onclick="clicked()">
 
 <!--アラームのセット完了画面-->
 <button type="button" value="alermsetbutton" onclick="settimefunc()">
-	アラームをセット（時間を選択：0～24時　0～59分）(台詞を選択：台詞のボタンクリック)
+	アラームをセット（時間を選択：0～24時　0～59分）<br>(台詞を選択：台詞のボタンクリック)
 </button>
 
 
