--- a/alerm.html
+++ b/alerm.html
@@ -98,19 +98,23 @@ function alerm(alermnumber){
 //アラームを削除する（未実装）
 function alermdelete()
 {
-alert(alermdeletenum+"つめをデリートします");
+alert("デリートします");
 //document.getElementById("alerm"+alermdeletenum).innerHTML="";
 }
 
 
 function wordsetting(wordsettingnum)
 {
-	alermdata[alermnum]=word[wordsettingnum];
-	//ここにアラームデータの大小を判別し、早いものから値を取り出すプログラムを書く
+
 	sethour=document.getElementById("sethour").value;
 	setminute=document.getElementById("setminute").value;
+
 	//フォームに数字が書かれていたらタイマーセット
-	if(isNaN(setminute) == false && isNaN(sethour) == false){settimefunc();}
+	if(isNaN(setminute) == false && isNaN(sethour) == false){
+		alermdata[alermnum]=word[wordsettingnum];
+		//ここにアラームデータの大小を判別し、早いものから値を取り出すプログラムを書く
+		settimefunc();
+	}
 	else{alert("フォームにアラームをかける時刻を入力して下さい");}
 }
 
