--- a/alerm.html
+++ b/alerm.html
@@ -58,7 +58,7 @@ function settimefunc()
 	//時間の差異が求められたのでミリ秒に直す
 	alermhour=balancehour+sethour-nowhour;
 
-alert(balancehour+sethour-nowhour);
+alert(balancehour+"_"+sethour-nowhour);
 
 	//alermhour→６０分*６０秒*1000ミリ
 	alermhour=alermhour*60*60*1000;
