--- a/alerm.html
+++ b/alerm.html
@@ -90,7 +90,8 @@ alert(alermhour+alermminute+alermsecond);
 function alerm(alermnumber){
 
 	document.getElementById("alermmusic").play();
-	alert(alermdata[0]+"の時間です");
+	document.getElementById("allalerm").innerHTML=alermdata[0]+"の時間です<br>"
+
 
 }
 
