--- a/alerm.html
+++ b/alerm.html
@@ -57,14 +57,14 @@ function settimefunc()
 	//時間の差異が求められたのでミリ秒に直す
 	alermhour=balancehour+sethour-nowhour;
 
-alert(balancehour+"_"+sethour-nowhour);
+alert(setminute-nowminute);
 
 	//alermhour→６０分*６０秒*1000ミリ
 	alermhour=alermhour*60*60*1000;
 
 	alermminute=balanceminute+setminute-nowminute;
 
-alert(balanceminute+"+"+setminute-nowminute);
+alert(balanceminute+setminute-nowminute);
 
 	//alermmunute→60秒*1000ミリ
 	alermminute=alermminute*60*1000;
