--- a/alerm.html
+++ b/alerm.html
@@ -64,7 +64,7 @@ alert(setminute-nowminute);
 
 	alermminute=balanceminute+setminute-nowminute;
 
-alert(balanceminute+setminute-nowminute);
+alert(balanceminute);
 
 	//alermmunute→60秒*1000ミリ
 	alermminute=alermminute*60*1000;
