--- a/alerm.html
+++ b/alerm.html
@@ -58,13 +58,14 @@ function settimefunc()
 	alermhour=balancehour+sethour-nowhour;
 
 alert(setminute-nowminute);
+alert(balanceminute);
+alert(balanceminute+setminute-nowminute);
 
 	//alermhour→６０分*６０秒*1000ミリ
 	alermhour=alermhour*60*60*1000;
 
 	alermminute=balanceminute+setminute-nowminute;
 
-alert(balanceminute);
 
 	//alermmunute→60秒*1000ミリ
 	alermminute=alermminute*60*1000;
@@ -90,7 +91,7 @@ alert(alermhour+alermminute+alermsecond);
 function alerm(alermnumber){
 
 	document.getElementById("alermmusic").play();
-	document.getElementById("allalerm").innerHTML=alermdata[0]+"の時間です<br>"
+	document.getElementById("allalerm").innerHTML+=alermdata[0]+"の時間です<br>"
 
 
 }
