--- a/alerm.html
+++ b/alerm.html
@@ -58,7 +58,8 @@ function settimefunc()
 	alermhour=balancehour+sethour-nowhour;
 
 //時刻が正確じゃない！！一分ずれる
-
+alert(balanceminute);
+alert(setminute);
 alert(balanceminute+setminute);
 
 	//alermhour→６０分*６０秒*1000ミリ
@@ -82,7 +83,6 @@ alert(balanceminute+setminute);
 		alermnum++;
 
 
-alert(alermhour);
 
 }
 
